feat: add user activation endpoint
